common/tectonic/resources/manifests/ingress/hostport.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: tectonic-ingress-controller
  namespace: tectonic-system
  labels:
    app: tectonic-lb
    component: ingress-controller
    type: nginx
spec:
  template:
    metadata:
      labels:
        app: tectonic-lb
        component: ingress-controller
        type: nginx
      annotations:
          scheduler.alpha.kubernetes.io/affinity: >
            {
              "nodeAffinity": {
                "requiredDuringSchedulingIgnoredDuringExecution": {
                  "nodeSelectorTerms": [
                    {
                      "matchExpressions": [
                        {
                          "key": "master",
                          "operator": "DoesNotExist"
                        }
                      ]
                    }
                  ]
                }
              }
            }
    spec:
      containers:
        - name: nginx-ingress-lb
          image: ${ingress_controller_image}
          args:
          - /nginx-ingress-controller
          - --nginx-configmap=$(POD_NAMESPACE)/tectonic-custom-error
          - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
          - --default-ssl-certificate=tectonic-system/tectonic-ingress-tls-secret
          - --watch-namespace=tectonic-system
          # use downward API
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
      hostNetwork: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
